# jhanley-wxwidgets

./: .gitattributes  HISTORY.md  README.md
wxWidgets-hello-world/: CMakeLists.txt  README.md
wxWidgets-hello-world/Installer/Debian/: control
wxWidgets-hello-world/Installer/Debian/tools/: install.sh
wxWidgets-hello-world/Installer/Windows/: setup.iss
wxWidgets-hello-world/Installer/Windows/tools/: install.bat  uninstall.bat
wxWidgets-hello-world/h/: local.h
wxWidgets-hello-world/macos/: Info.plist  app.icns
wxWidgets-hello-world/src/: mainapp.cpp  mainframe.cpp
wxWidgets-hello-world/tools-debian/: build_release.sh  configure_cmake_debug.sh  configure_cmake_release.sh  run_release.sh
wxWidgets-hello-world/tools-macos/: clean.sh  configure_cmake_debug.sh  configure_cmake_release.sh  run_debug.sh  run_release.sh
wxWidgets-hello-world/tools-windows/: build_release.bat
wxWidgets-hello-world/windows/: README.md  app.rc
wxWidgets-tree-list/: BUILD-REDHAT.md  CMakeLists.txt  INTERNATIONALIZATION.md  README.md  TRANSLATION.md
wxWidgets-tree-list/Installer/Debian/: control
wxWidgets-tree-list/Installer/Debian/tools/: build.sh  remove.sh
wxWidgets-tree-list/Installer/Windows/: HISTORY.md  setup.iss
wxWidgets-tree-list/Installer/Windows/tools/: clean.bat
wxWidgets-tree-list/h/: local.h
wxWidgets-tree-list/linux/: app_512.xpm  refresh.xpm
wxWidgets-tree-list/src/: clock.cpp  listctrl.cpp  mainapp.cpp  mainframe.cpp  menus.cpp  toolbar.cpp  treectrl.cpp
wxWidgets-tree-list/tools/: compile_strings.bat  compile_strings.sh  extract_strings.bat  extract_strings.sh
wxWidgets-tree-list/tools/debian/: build_debug.sh  clean.sh  run_debug.sh
wxWidgets-tree-list/tools/macos/: build_debug.sh  build_release.sh
wxWidgets-tree-list/tools/redhat/: build_debug.sh  build_release.sh  clean.sh  configure_cmake_debug.sh  configure_cmake_release.sh  run_debug.sh  run_release.sh
wxWidgets-tree-list/tools/windows/: build_debug.bat  configure_cmake.bat  run_debug.bat  run_release.bat
wxWidgets-tree-list/windows/: README.md  app.rc
